--- a/package.json
+++ b/package.json
@@ -1,21 +1,12 @@
 {
-  "name": "web-crawler",
+  "name": "birth-simulator-v2-main",
   "version": "1.0.0",
-  "description": "",
+  "description": "![FOTP](./public/img/doge.ico)",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.1.3",
-    "cheerio": "^1.0.0-rc.12",
-    "express": "^4.18.2",
-    "express-ws": "^5.0.2",
-    "image-downloader": "^4.3.0",
-    "request": "^2.88.2",
-    "socket.io": "^4.5.3",
-    "ws": "^8.11.0"
-  }
+  "license": "ISC"
 }
